# farm_quick_td_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/api/routers/: routes.py
app/api/routers/auth/: auth_routes.py
app/api/routers/dependencies/: user_deps.py
app/api/routers/tasks/: task_routes.py
app/api/routers/user/: user_routes.py
app/core/: __init__.py  constants.py  docs_metadata.py  docs_settings.py  logger.py  path_conf.py  rate_limiting.py  security.py  settings.py
app/domain/datasource/: task_datasource.py  user_datasource.py
app/domain/entities/: task.py  task_enum.py  user.py
app/domain/repositories/: task_repository_interface.py  user_repository_interface.py
app/infrastructure/: __init__.py
app/infrastructure/datasource/: __init__.py  beanie_task_datasource.py  beanie_user_datasource.py  build_filters_datasource.py
app/infrastructure/datasource/enums/: beanie_enums.py
app/infrastructure/mappers/: task_mapper.py  user_mapper.py
app/infrastructure/models/odm/: beanie_task_model.py  beanie_user_model.py
app/infrastructure/repositories/: task_repository_impl.py  user_repository_impl.py
app/schemas/pydantic/: auth_schemas.py  common_schemas.py  task_schemas.py  user_schemas.py
app/services/: task_service.py  user_service.py
app/static/css/: blue-planet.css
app/utils/enums/: datasource_filter_transformer_enum.py  filter_capabilities_enum.py  sort_enum.py
tests/__mocks__/: test_task.py  test_users_mocks.py
tests/e2e/: auth_me_flow_test.py  auth_tasks_flow_test.py  conftest.py
tests/integration/: conftest.py  user_route_me_test.py
tests/integration/api/: task_routes_test.py
tests/unit/dependencies/: get_current_user_test.py
tests/unit/entities/: task_entity_test.py
tests/unit/models/: beanie_task_model_test.py  conftest.py
tests/utils/: test_client.py
